fix(*): Composer horizontal scroll, fix archive-lots-and-scroll-down, draft-store cleanup exception,

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -30,6 +30,7 @@
     border-bottom: 0;
     max-width: @compose-width;
     margin: 0 auto;
+    overflow:hidden; // necessary because of negative margins below
 
     .composer-action-bar-content {
       display:flex;
